add kaggle link

--- a/Kaggle workshop.ipynb
+++ b/Kaggle workshop.ipynb
@@ -147,10 +147,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following feature interaction lists come from Dmitry, one of my teammates during the compeition\n",
+    "The following feature interaction lists come from Dmitry, one of my teammates during the compeition.\n",
     "I believe he got these from the output from XGBFi which will be shown in a bit.\n",
     "\n",
-    "Start with pairs of features"
+    "Start with pairs of features."
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now goes triples"
+    "Now three-way interactions"
    ]
   },
   {
