adding Kaggle description slide

--- a/Kaggle workshop.ipynb
+++ b/Kaggle workshop.ipynb
@@ -831,7 +831,7 @@
    "source": [
     "# v10 -- round v10 -- convert to categorical later\n",
     "hist(ts1$v10, breaks = 1000) # Frequency spikes at pretty even intervals, so can round the values to the nearest spike and turn into a categorical\n",
-    "set(ts1, j=\"v10\", value=round(ts1[,v10]/0.0218818357511,0))"
+    "set(ts1, j=\"v10\", value=round(ts1[,v10]/0.0218818357511,0)) # posted by raddar in the forums"
    ]
   },
   {
